--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ideanotes",
+  "name": "abc",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -15,7 +15,9 @@
     "body-parser": "^1.20.0",
     "express": "^4.17.3",
     "express-handlebars": "^6.0.5",
-    "mongoose": "^6.3.0"
+    "method-override": "^3.0.0",
+    "mongoose": "^6.3.0",
+    "morgan": "1.10"
   },
   "devDependencies": {
     "nodemon": "^2.0.19"
