--- a/package.json
+++ b/package.json
@@ -15,8 +15,9 @@
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.0",
     "connect-flash": "^0.1.1",
+    "dotenv": "^16.0.2",
     "express": "^4.17.3",
-    "express-handlebars": "^6.0.5",
+    "express-handlebars": "^6.0.6",
     "express-session": "^1.17.3",
     "method-override": "^3.0.0",
     "mongoose": "^6.3.0",
